--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-12  p-5 mb-5 d-flex justify-content-end align-items-center">
                     <i class="fa fa-times cross" style="font-size: 1.5rem;cursor: pointer;"></i>
             </div>
-                <div class="col-12 text-light  text-center mx-auto">
+                <div class="col-md-4 col-12 text-light  text-center mx-auto">
                  <a href="#home">  <h5 class="p-3 " >HOME</h5 ></a>
                  <a href="#about">  <h5 class="p-3 " >WHO WE ARE</h5 ></a>
                  <a href="#team">  <h5 class="p-3 " >OUR TEAM</h5 ></a>
