--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="row bg-light">
                         
                             <nav class="col-md-10 col-12 p-3 mx-auto fixed-top">
-                                <h4> <b style="color: #484646;"> Web<span style="color: #0082C6;">Style.</span> </b></h4>
+                                <h4> <b style="color: #484646;">Web<span style="color: #0082C6;">Style.</span> </b></h4>
                                 <div class="nav-circle p-3">
                                     <i class="fa fa-bars"></i>
                                 </div>
@@ -62,7 +62,7 @@
                           <a href="#about">  <div class="navigate-circle mx-auto">
                                 <i class="fa fa-chevron-down"></i>
                             </div></a>
-                           <a href="tel:+918461095060"> <button class="btn btn-primary"> <small> Contact to resolve Queries.</small></button></a>
+                           <a href="https://wa.me/+918461095060?text=Hello WebStyle.!!"> <button class="btn btn-primary"> <small> Contact to resolve Queries.</small></button></a>
                         </div>
                     </div>
                 </div>
