--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
                                 </div>
                             </a>
                             <a href="https://wa.me/+918461095060?text=Hello WebStyle.!!"> <button
-                                    class="btn btn-primary"> <small> Contact to resolve Queries.</small></button></a>
+                                    class="btn btn-primary"> <small> Contact to resolve Queries on Whatsaap</small></button></a> 
+
+                                    
+                            <a href="sms:+918461095060&body=Hello WebStyle. !!"> <button
+                                        class="btn btn-primary"> <small> Contact to resolve Queries on Message</small></button></a>
                         </div>
                     </div>
                 </div>
@@ -375,7 +379,7 @@
      <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="script.js"></script>
- 
+  
 </body>
 
 </html>
