--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
                     <h4 class=""> <b> Want to Join our Team ? </b></h4>
 
                     <p>Explore amazing careers at Webstyle.</p>
-                    <button class="col-lg-2 col-md-4 col-12 mx-auto btn btn-primary"> <small>Opening Positions</small>
-                    </button>
+                <a href="./career.html">    <button class="col-lg-2 col-md-4 col-12 mx-auto btn btn-primary"> <small>Opening Positions</small>
+                    </button> </a>
                 </div>
             </div>
             <div class="row ad-5 mt-5 " id="contact">
