--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
                     </a>
                   
                     <a href="aboutus.html">
-                        <h5 class="p-3 ">About Us</h5>
+                        <h5 class="p-3 ">ABOUT US</h5>
                     </a>
                     <a href="https://www.instagram.com/vijulmalviya_designs">
                         <h5 class="p-3 ">PORTFOLIO</h5>
