--- a/career.html
+++ b/career.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="container">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-12">
                                 <div class="card text-center">
                                     <div class="card-header">
                                        Experience 2+ Year
@@ -97,7 +97,7 @@
                                   </div> 
                             </div> 
 
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-12">
                                 <div class="card text-center">
                                     <div class="card-header">
                                        Experience 2+ Year
@@ -113,7 +113,7 @@
                                   </div> 
                             </div> 
 
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-12">
                                 <div class="card text-center">
                                     <div class="card-header">
                                        Experience 2+ Year
