--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-12  aboutbg">
                 <div class="row ad-3 ">
-                    <div class="col-10 mx-auto text-center p-5" data-aos="fade-up">
+                    <div class="col-lg-10 col-12 mx-auto text-center p-5" data-aos="fade-up">
                         <h4> <b>  About WebStyle.</b></h4>
                         <p class="mt-5">
                             <b>Welcome to WebStyle International (P) Ltd. !!
