--- a/career.html
+++ b/career.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-12  aboutbg">
                 <div class="row ad-3 ">
-                    <div class="col-10 mx-auto text-center p-5" data-aos="fade-up">
+                    <div class="col-lg-10 col-12 mx-auto text-center p-5" data-aos="fade-up">
                         <h4> <b> Career with WebStyle.</b></h4>
                         <p class="mt-5">
                             <b>Are you ready for some of the best challenges offered by the industry?
@@ -80,7 +80,7 @@
 
                     </div>
                     <div class="container">
-                        <div class="row">
+                        <div class="row gy-2">
                             <div class="col-lg-4 col-md-6 col-12">
                                 <div class="card text-center">
                                     <div class="card-header">
